--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "pandas>=2.3.0",
     "parse>=1.20.2",
     "python-decouple>=3.8",
+    "redis>=6.4.0",
     "sqlalchemy>=2.0.41",
     "tabulate>=0.9.0",
 ]
