--- a/data/yaml_configs/week_config.yaml
+++ b/data/yaml_configs/week_config.yaml
@@ -1,159 +1,11 @@
-1:
-  0:
-    time_start: '9:30'
-    time_end: '18:00'
-    step: 30
-    treatment: true
-  1:
-    time_start: '9:30'
-    time_end: '18:00'
-    step: 30
-    treatment: true
-  2:
-    time_start: '9:30'
-    time_end: '18:00'
-    step: 30
-    treatment: true
-  3:
-    time_start: '9:30'
-    time_end: '18:00'
-    step: 30
-    treatment: true
-  4:
-    time_start: '9:30'
-    time_end: '18:00'
-    step: 30
-    treatment: true
-  5:
-    time_start: '10:00'
-    time_end: '14:00'
-    step: 30
-    treatment: true
-  6:
-    time_start: '10:00'
-    time_end: '14:00'
-    step: 30
-    treatment: true
-2:
-  0:
-    time_start: '9:30'
-    time_end: '18:00'
-    step: 30
-    treatment: true
-  1:
-    time_start: '9:30'
-    time_end: '18:00'
-    step: 30
-    treatment: true
-  2:
-    time_start: '9:30'
-    time_end: '18:00'
-    step: 30
-    treatment: true
-  3:
-    time_start: '9:30'
-    time_end: '18:00'
-    step: 30
-    treatment: true
-  4:
-    time_start: '9:30'
-    time_end: '18:00'
-    step: 30
-    treatment: true
-  5:
-    time_start: '10:00'
-    time_end: '14:00'
-    step: 30
-    treatment: true
-  6:
-    time_start: '10:00'
-    time_end: '14:00'
-    step: 30
-    treatment: true
-3:
-  0:
-    time_start: '16:00'
-    time_end: '18:00'
-    step: 40
-  1:
-    time_start: '16:00'
-    time_end: '18:00'
-    step: 40
-  2:
-    time_start: '16:00'
-    time_end: '18:00'
-    step: 40
-  3:
-    time_start: '16:00'
-    time_end: '18:00'
-    step: 40
-  4:
-    time_start: '16:00'
-    time_end: '18:00'
-    step: 40
-  5:
-    time_start: '10:00'
-    time_end: '12:00'
-    step: 40
-  6:
-    time_start: '10:00'
-    time_end: '12:00'
-    step: 40
-4:
-  0:
-    time_start: '17:00'
-    time_end: '18:00'
-    step: 40
-  1:
-    time_start: '17:00'
-    time_end: '18:00'
-    step: 40
-  2:
-    time_start: '17:00'
-    time_end: '18:00'
-    step: 40
-  3:
-    time_start: '17:00'
-    time_end: '18:00'
-    step: 40
-  4:
-    time_start: '17:00'
-    time_end: '18:00'
-    step: 40
-  5:
-    time_start: '10:00'
-    time_end: '13:00'
-    step: 40
-  6:
-    time_start: '10:00'
-    time_end: '13:00'
-    step: 40
-5:
-  0:
-    time_start: '9:50'
-    time_end: '18:00'
-    step: 40
-  1:
-    time_start: '9:50'
-    time_end: '18:00'
-    step: 40
-  2:
-    time_start: '9:50'
-    time_end: '18:00'
-    step: 40
-  3:
-    time_start: '9:50'
-    time_end: '18:00'
-    step: 40
-  4:
-    time_start: '9:50'
-    time_end: '18:00'
-    step: 40
-  5:
-    time_start: '10:20'
-    time_end: '14:00'
-    step: 40
-  6:
-    time_start: '10:20'
-    time_end: '14:00'
-    step: 40
+ve_days:
+- 4
+treatment: true
+weekend_days:
+- 5
+days_without_work:
+- 6
+regular_start_time: '9:30'
+regular_end_time: '18:00'
+weekend_start_time: '10:00'
+weekend_end_time: '14:00'
